// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Returns both normal users and system users 1`] = `
[
  {
    "administrativeAreaId": "27160bbd-32d1-4625-812f-860226bfb92a",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "0ffbd058-391f-42a3-839f-b6cdd55325db",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "administrativeAreaId": "15125bb4-f42d-41c1-b8fb-0012def8aa07",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "71a46e4a-a030-48be-8a60-982d93a8192e",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "administrativeAreaId": "cb435d9c-910b-4d8a-a9ef-7b3f90516c5c",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "def971c6-4303-40bf-8822-85468b8ab756",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "administrativeAreaId": "a0316c43-4f27-48fd-a034-ed3b4dc653fe",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "e0f1460b-9569-49cf-88eb-21e0c5f8c899",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "administrativeAreaId": "d2adaa28-878e-4b3d-adb5-ecedc043f15a",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": undefined,
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "ea498fc5-6ef8-4027-893f-972dbfe25fb9",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "id": "[sanitized]",
    "legacyId": "67bda93bfc07dee78ae55114",
    "name": "My health system integration",
    "type": "system",
  },
]
`;

exports[`Returns multiple users with honorifics 1`] = `
[
  {
    "administrativeAreaId": "27160bbd-32d1-4625-812f-860226bfb92a",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": "4th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "0ffbd058-391f-42a3-839f-b6cdd55325db",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "administrativeAreaId": "15125bb4-f42d-41c1-b8fb-0012def8aa07",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": "5th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "71a46e4a-a030-48be-8a60-982d93a8192e",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "administrativeAreaId": "cb435d9c-910b-4d8a-a9ef-7b3f90516c5c",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": "6th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "def971c6-4303-40bf-8822-85468b8ab756",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "administrativeAreaId": "a0316c43-4f27-48fd-a034-ed3b4dc653fe",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": "7th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "e0f1460b-9569-49cf-88eb-21e0c5f8c899",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
  {
    "administrativeAreaId": "d2adaa28-878e-4b3d-adb5-ecedc043f15a",
    "avatar": undefined,
    "device": undefined,
    "email": "[sanitized]",
    "fullHonorificName": "8th Class Registration Officer, John Doe",
    "id": "[sanitized]",
    "mobile": undefined,
    "name": [
      {
        "family": "Doe",
        "given": [
          "John",
        ],
        "use": "en",
      },
    ],
    "primaryOfficeId": "ea498fc5-6ef8-4027-893f-972dbfe25fb9",
    "role": "REGISTRATION_AGENT",
    "signature": undefined,
    "status": "active",
    "type": "user",
  },
]
`;
